--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -7,11 +7,15 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="org.eyeseetea.uicapp.ScrollingActivity"
     tools:showIn="@layout/activity_scrolling">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    <include layout="@layout/mother_first_name_row"></include>
+    <include layout="@layout/surname_row"></include>
+    <include layout="@layout/district_of_birth_row"></include>
+    <include layout="@layout/date_of_birth_row"></include>
+    <include layout="@layout/sex_row"></include>
+    <include layout="@layout/code_row"></include>
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
