--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="code_text">24dp</dimen>
+    <dimen name="input_margin">10dp</dimen>
+    <dimen name="row_padding_top">5dp</dimen>
+    <dimen name="row_padding_bottom">10dp</dimen>
+
 </resources>
