fix sharedPreferences keys

--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -54,24 +54,24 @@
         android:weightSum="1"
         android:background="@color/white">
 
-        <Spinner
-            android:id="@+id/day_spinner"
+        <TextView
+            android:id="@+id/day_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="@dimen/text_margin"
             android:layout_weight="0.3" />
 
-        <Spinner
-            android:id="@+id/month_spinner"
+        <TextView
+            android:id="@+id/month_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="@dimen/text_margin"
             android:layout_weight="0.3"/>
 
-        <Spinner
-            android:id="@+id/year_spinner"
+        <TextView
+            android:id="@+id/year_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
