--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -4,7 +4,6 @@
     <string name="shared_key_surname">surname_key</string>
     <string name="shared_key_district">district_key</string>
     <string name="shared_key_sex">sex_key</string>
-    <string name="shared_key_day">day_key</string>
-    <string name="shared_key_month">month_key</string>
-    <string name="shared_key_year">year_key</string>
+    <string name="shared_key_timestamp_date">timestamp_date</string>
+    <string name="default_no_date">-1</string>
 </resources>
