--- a/app/src/main/res/layout/code_row.xml
+++ b/app/src/main/res/layout/code_row.xml
@@ -18,6 +18,7 @@
         android:orientation="horizontal"
         android:weightSum="1">
         <TextView
+            android:id="@+id/code_text"
             android:layout_width="0px"
             android:layout_weight="0.80"
             android:layout_height="match_parent"
