--- a/app/src/main/res/layout/code_row.xml
+++ b/app/src/main/res/layout/code_row.xml
@@ -34,6 +34,7 @@
             android:text="@string/code_copy"
             android:textColor="@color/code_text"
             android:background="@drawable/button_background"
+            android:onClick="copyCode"
             android:textSize="@dimen/code_text"/>
     </LinearLayout>
 </LinearLayout>
