--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/date_background"
     android:paddingTop="@dimen/row_padding_top"
     android:paddingBottom="@dimen/row_padding_bottom">
 
-    <TextView
+    <org.eyeseetea.uicapp.views.TextCard
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
@@ -15,6 +17,7 @@
         android:clickable="true"
         android:focusableInTouchMode="true"
         android:textColor="@color/date_text"
+        app:tFontName="@string/condensed_font_name"
         android:text="@string/date_title" />
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,28 +29,31 @@
         android:weightSum="1"
         android:background="@color/white">
 
-        <TextView
+        <org.eyeseetea.uicapp.views.TextCard
             android:id="@+id/day_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="@dimen/text_margin"
+            app:tFontName="@string/condensed_font_name"
             android:layout_weight="0.3" />
 
-        <TextView
+        <org.eyeseetea.uicapp.views.TextCard
             android:id="@+id/month_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="@dimen/text_margin"
+            app:tFontName="@string/condensed_font_name"
             android:layout_weight="0.3"/>
 
-        <TextView
+        <org.eyeseetea.uicapp.views.TextCard
             android:id="@+id/year_value"
             android:layout_width="0px"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_margin="@dimen/text_margin"
+            app:tFontName="@string/condensed_font_name"
             android:layout_weight="0.3"/>
     </LinearLayout>
 </LinearLayout>
