--- a/app/src/main/res/layout/mother_first_name_row.xml
+++ b/app/src/main/res/layout/mother_first_name_row.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mother_background"
+    android:layout_marginTop="@dimen/row_marging_top"
+    android:layout_marginBottom="@dimen/row_marging_button"
     android:paddingTop="@dimen/row_padding_top"
     android:paddingBottom="@dimen/row_padding_bottom">
 
@@ -20,6 +22,7 @@
         android:id="@+id/mother_edit_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:inputType="text"
         android:layout_marginLeft="@dimen/input_margin"
         android:layout_marginRight="@dimen/input_margin"
         app:tFontName="@string/condensed_font_name"
