--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,18 +3,22 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="code_background">#102c5b</color>
     <color name="code">#999999</color>
-    <color name="code_button">#efac43</color>
+    <color name="code_header">#4c6c97</color>
+    <color name="code_button">#4c6c97</color>
     <color name="code_text">@color/white</color>
     <color name="date_background">#ccccff</color>
-    <color name="date_text">#404eff</color>
-    <color name="district_background">#ffcccc</color>
-    <color name="district_text">#ff4d57</color>
-    <color name="sex_background">#ffcccc</color>
-    <color name="sex_text">#ff4d57</color>
-    <color name="surname_background">#cce5ff</color>
-    <color name="surname_text">#6bb9ff</color>
-    <color name="mother_background">#deefd4</color>
-    <color name="mother_text">#62c079</color>
+    <color name="date_text">@color/black</color>
+    <color name="district_background">#b0a4b6</color>
+    <color name="district_text">@color/black</color>
+    <color name="sex_background">#869bb7</color>
+    <color name="sex_text">@color/black</color>
+    <color name="surname_background">#fcbbb1</color>
+    <color name="surname_text">@color/black</color>
+    <color name="mother_background">#ffe0c2</color>
+    <color name="mother_text">@color/black</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="action_bar_background">#c0c0c0</color>
 </resources>
