--- a/app/src/main/res/layout/district_of_birth_row.xml
+++ b/app/src/main/res/layout/district_of_birth_row.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/district_background"
-    android:layout_marginBottom="@dimen/row_marging_button"
+    android:layout_marginBottom="@dimen/row_margin_button"
     android:paddingTop="@dimen/row_padding_top"
     android:paddingBottom="@dimen/row_padding_bottom">
 
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:textColor="@color/district_text"
+        android:textSize="@dimen/title_text_size"
         app:tFontName="@string/condensed_font_name"
         android:text="@string/district_title" />
 
