--- a/app/src/main/res/layout/mother_first_name_row.xml
+++ b/app/src/main/res/layout/mother_first_name_row.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/mother_background"
-    android:layout_marginTop="@dimen/row_marging_top"
-    android:layout_marginBottom="@dimen/row_marging_button"
+    android:layout_marginTop="@dimen/row_margin_top"
+    android:layout_marginBottom="@dimen/row_margin_button"
     android:paddingTop="@dimen/row_padding_top"
     android:paddingBottom="@dimen/row_padding_bottom">
 
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/mother_text"
+        android:textSize="@dimen/title_text_size"
         android:layout_margin="@dimen/text_margin"
         app:tFontName="@string/condensed_font_name"
         android:text="@string/mother_title" />
