--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,10 +3,16 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="code_text">24dp</dimen>
+    <dimen name="title_text_size">18dp</dimen>
+    <dimen name="sex_text_size">14dp</dimen>
     <dimen name="input_margin">10dp</dimen>
-    <dimen name="row_marging_top">12dp</dimen>
-    <dimen name="row_marging_button">3dp</dimen>
+    <dimen name="row_margin_top">12dp</dimen>
+    <dimen name="row_margin_button">3dp</dimen>
     <dimen name="row_padding_top">5dp</dimen>
     <dimen name="row_padding_bottom">10dp</dimen>
+    <dimen name="sex_margin_button">3dp</dimen>
+    <dimen name="sex_padding">15dp</dimen>
+    <dimen name="edit_text_top_padding">10dp</dimen>
+    <dimen name="edit_text_bottom_padding">10dp</dimen>
 
 </resources>
