--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -12,7 +12,7 @@
     <org.eyeseetea.uicapp.views.TextCard
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginLeft="@dimen/text_margin"
         android:id="@+id/date_header"
         android:textSize="@dimen/title_text_size"
         android:textColor="@color/date_text"
@@ -21,13 +21,18 @@
     <org.eyeseetea.uicapp.views.EditCard
         android:id="@+id/date_value"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/edit_text_height"
         android:inputType="none"
+        android:textSize="@dimen/title_text_size"
         android:digits=""
         android:cursorVisible="false"
         android:layout_marginLeft="@dimen/input_margin"
-        android:paddingTop="@dimen/edit_text_top_padding"
-        android:paddingBottom="@dimen/edit_text_bottom_padding"
+        android:textColor="@color/date_text"
+        android:textColorHint="@color/hint_color"
+        android:drawableRight="@drawable/calendar"
+        android:gravity="center"
+        android:minHeight="@dimen/edit_text_height"
+        android:paddingLeft="@dimen/edit_text_left_padding"
         android:layout_marginRight="@dimen/input_margin"
         app:tFontName="@string/condensed_font_name"
         android:background="@color/white"/>
