--- a/app/src/main/res/layout/code_row.xml
+++ b/app/src/main/res/layout/code_row.xml
@@ -6,44 +6,67 @@
     android:layout_height="match_parent"
     android:background="@color/code_background"
     android:layout_marginTop="@dimen/row_margin_top"
-    android:paddingTop="@dimen/row_padding_top"
-    android:paddingBottom="@dimen/row_padding_bottom">
-    <org.eyeseetea.uicapp.views.TextCard
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="@dimen/code_text"
-        android:textColor="@color/code_header"
-        android:gravity="center"
-        app:tFontName="@string/condensed_font_name"
-        android:text="@string/code_title" />
+    android:paddingTop="@dimen/row_padding_top" >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="1">
-        <Button
+        <LinearLayout
             android:layout_width="0px"
+            android:layout_height="match_parent"
             android:layout_weight="0.20"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+        <ImageButton
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/clear_button_drawable"
+            android:adjustViewBounds="true"
+            android:scaleType="centerInside"
             android:onClick="clearFields"  />
-        <org.eyeseetea.uicapp.views.TextCard
-            android:id="@+id/code_text"
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0px"
             android:layout_weight="0.60"
             android:layout_height="wrap_content"
-            android:text="@string/code_invalid"
-            android:textColor="@color/code_text"
-            android:gravity="center"
-            app:tFontName="@string/condensed_font_name"
-            android:textSize="@dimen/code_text"/>
-        <Button
-            android:id="@+id/code_button"
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+            <org.eyeseetea.uicapp.views.TextCard
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="@dimen/code_text_title"
+                android:textColor="@color/code_header"
+                android:gravity="center"
+                android:layout_gravity="top"
+                app:tFontName="@string/condensed_font_name"
+                android:text="@string/code_title" />
+            <org.eyeseetea.uicapp.views.TextCard
+                android:id="@+id/code_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/code_invalid"
+                android:textColor="@color/code_text"
+                android:gravity="center"
+                app:tFontName="@string/condensed_font_name"
+                android:textSize="@dimen/code_text"/>
+
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="0px"
+            android:layout_height="match_parent"
             android:layout_weight="0.20"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            android:background="@drawable/copy_button_drawable"
-            android:onClick="copyCode"  />
+            android:layout_gravity="center_vertical"
+            android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/code_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/copy_button_drawable"
+                android:adjustViewBounds="true"
+                android:scaleType="centerInside"
+                android:onClick="copyCode"  />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
