--- a/app/src/main/res/layout/sex_row.xml
+++ b/app/src/main/res/layout/sex_row.xml
@@ -11,7 +11,7 @@
     <org.eyeseetea.uicapp.views.TextCard
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginLeft="@dimen/text_margin"
         android:textSize="@dimen/title_text_size"
         android:textColor="@color/sex_text"
         app:tFontName="@string/condensed_font_name"
@@ -26,10 +26,11 @@
         <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:orientation="vertical">
             <org.eyeseetea.uicapp.views.CustomButton
                 android:id="@+id/radio_male"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onMaleClicked"
                 android:background="@drawable/sex_button_drawable"
@@ -40,7 +41,7 @@
                 android:text="@string/sex_male"/>
             <org.eyeseetea.uicapp.views.CustomButton
                 android:id="@+id/radio_female"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onFemaleClicked"
                 android:background="@drawable/sex_button_drawable"
@@ -51,7 +52,7 @@
                 android:text="@string/sex_female"/>
             <org.eyeseetea.uicapp.views.CustomButton
                 android:id="@+id/radio_transgender"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="onTransgenderClicked"
                 android:background="@drawable/sex_button_drawable"
