--- a/app/src/main/res/layout/surname_row.xml
+++ b/app/src/main/res/layout/surname_row.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_text_height"
         android:inputType="text"
+        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZĀāĂăĄąĆćĈĉĊċČčĎďĐđĒēĔĕĖėĘęĚěĜĝĞğĠġĢģĤĥĦħĨĩĪīĬĭĮįİıĲĳĴĵĶķĸĹĺĻļĽľĿŀŁłŃńŅņŇňŉŊŋŌōŎŏŐőŒœŔŕŖŗŘřŚśŜŝŞşŠšŢţŤťŦŧŨũŪūŬŭŮůŰűŲųŴŵŶŷŸŹźŻżŽžſç"
         android:textSize="@dimen/title_text_size"
         android:textColor="@color/surname_text"
         android:textColorHint="@color/hint_color"
