--- a/app/src/main/res/layout/district_of_birth_row.xml
+++ b/app/src/main/res/layout/district_of_birth_row.xml
@@ -22,7 +22,7 @@
         android:id="@+id/district_edit_text"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_text_height"
-        android:inputType="text"
+        android:inputType="textNoSuggestions"
         android:textSize="@dimen/title_text_size"
         android:textColor="@color/district_text"
         android:hint="@string/district_hint"
