--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,5 +18,7 @@
     <dimen name="edit_text_left_padding">15dp</dimen>
     <dimen name="action_bar_text_size">30dp</dimen>
     <dimen name="edit_text_height">40dp</dimen>
+    <dimen name="info_margin">2dp</dimen>
+    <dimen name="info_margin_bottom">4dp</dimen>
 
 </resources>
