--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -36,4 +36,41 @@
         android:layout_marginRight="@dimen/input_margin"
         app:tFontName="@string/condensed_font_name"
         android:background="@color/white"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/date_background"
+        android:layout_marginBottom="@dimen/row_margin_button"
+        android:paddingTop="@dimen/row_padding_top"
+        android:paddingBottom="@dimen/row_padding_bottom">
+    <org.eyeseetea.uicapp.views.CustomCheckBox
+        android:id="@+id/chk_twin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layoutDirection="rtl"
+        android:text="@string/chk_twin"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:textSize="@dimen/title_text_size"
+        android:textColor="@color/date_text"
+        app:tFontName="@string/condensed_font_name"
+        android:textAlignment="center" />
+
+        <Spinner
+            android:visibility="gone"
+            android:id="@+id/twin_dropdown"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:inputType="textNoSuggestions"
+            android:textSize="@dimen/title_text_size"
+            android:textColor="@color/date_text"
+            android:textColorHint="@color/hint_color"
+            android:layout_marginLeft="@dimen/input_margin"
+            android:layout_marginRight="@dimen/input_margin"
+            android:paddingLeft="@dimen/edit_text_left_padding"
+            android:minHeight="@dimen/edit_text_height"
+            android:background="@drawable/twin_dropdown_item"
+            android:spinnerMode="dropdown"/>
+        </LinearLayout>
 </LinearLayout>
