Finish twin logic

--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -64,12 +64,12 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/edit_text_height"
             android:inputType="textNoSuggestions"
-            android:textSize="@dimen/title_text_size"
+            android:textSize="@dimen/spinner_text_size"
             android:textColor="@color/date_text"
             android:textColorHint="@color/hint_color"
-            android:layout_marginLeft="@dimen/input_margin"
+            android:layout_marginLeft="@dimen/twin_spinner_margin"
             android:layout_marginRight="@dimen/input_margin"
-            android:paddingLeft="@dimen/edit_text_left_padding"
+            android:paddingLeft="@dimen/twin_spinner_margin"
             android:minHeight="@dimen/edit_text_height"
             android:background="@drawable/twin_dropdown_item"
             android:spinnerMode="dropdown"/>
