--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -4,6 +4,7 @@
     <string name="shared_key_surname" translatable="false">surname_key</string>
     <string name="shared_key_district" translatable="false">district_key</string>
     <string name="shared_key_twin" translatable="false">twin_key</string>
+    <string name="shared_key_chk_twin" translatable="false">twin_chk_key</string>
     <string name="shared_key_sex" translatable="false">sex_key</string>
     <string name="shared_key_timestamp_date" translatable="false">timestamp_date</string>
     <string name="default_no_date" translatable="false">-1</string>
