--- a/app/src/main/res/layout/date_of_birth_row.xml
+++ b/app/src/main/res/layout/date_of_birth_row.xml
@@ -46,7 +46,7 @@
         android:paddingTop="@dimen/row_padding_top"
         android:paddingBottom="@dimen/row_padding_bottom">
     <org.eyeseetea.uicapp.views.CustomCheckBox
-        android:id="@+id/chk_twin"
+        android:id="@+id/twin_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layoutDirection="rtl"
