--- a/app/src/main/res/layout/surname_row.xml
+++ b/app/src/main/res/layout/surname_row.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/row_padding_top"
     android:paddingBottom="@dimen/row_padding_bottom">
 
-    <org.eyeseetea.uicapp.views.TextCard
+    <org.eyeseetea.uicapp.presentation.views.TextCard
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/text_margin"
@@ -18,7 +18,7 @@
         app:tFontName="@string/condensed_font_name"
         android:text="@string/surname_title" />
 
-    <org.eyeseetea.uicapp.views.EditCard
+    <org.eyeseetea.uicapp.presentation.views.EditCard
         android:id="@+id/surname_edit_text"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edit_text_height"
