--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:background="@color/white"
-    tools:context="org.eyeseetea.uicapp.ScrollingActivity">
+    tools:context="org.eyeseetea.uicapp.presentation.ScrollingActivity">
 
 
 
