--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.eyeseetea.uicapp.ScrollingActivity"
+    tools:context="org.eyeseetea.uicapp.presentation.ScrollingActivity"
     tools:showIn="@layout/activity_scrolling">
     <LinearLayout
         android:id="@+id/container_scrolled"
